fix margin below title and project collapse animation

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -34,6 +34,10 @@ h2 {
 	justify-content: flex-start;
 }
 
+.name {
+	margin-bottom: -10px;
+}
+
 .name:hover {
 	cursor: pointer;
 }
@@ -169,6 +173,7 @@ a:hover {
 	opacity: 0;
 	height: 0px;
 	overflow: hidden;
+	transition: 0.5s;
 }
 
 .desc-show {
@@ -178,7 +183,7 @@ a:hover {
 	margin-bottom: 50px;
 	opacity: 1;
 	overflow: visible;
-	transition: opacity 0.5s 0s;
+	transition: height 1s, opacity 1s;
 }
 
 .desc-link {
